--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   },
+  "scripts": {
+    "build:css": "bunx postcss src/styles.css -o public/styles.css"
+  }
   "peerDependencies": {
     "typescript": "^5.0.0"
   }
