--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "@types/bun": "latest",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.0.0"
   },
   "scripts": {
     "build:css": "bunx postcss src/styles.css -o public/styles.css"
   }
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
 }
+
